# confmirror

./: .env.example  .gitignore  AGENTS.md  AUTO_COMPLETION.md  CHANGELOG.md  DESIGN.md  LICENSE  QWEN.md  README.md  backup.py  pyproject.toml  requirements.txt  restore.py  script.sh  sync.conf
.agents/: AGENTS.md
.agents/skills/confmirror/: SKILL.md
.agents/skills/git-commit-push/: SKILL.md
.github/workflows/: ci.yml  release.yml
archives/: tips.txt
backup-script/: example_backup_script.sh
docs/: AGENT_INTEGRATION.md  MULTI_SERVER.md  TESTING.md  TODO.md
docs/superpowers/specs/: 2026-06-20-init-command-design.md
example/: confmirror.yaml
src/confmirror/: __init__.py  backup.py  cli.py  config.py  core.py  diff.py  gitops.py  global_config.py  init.py  list.py  logger.py  meta.py  output.py  perms.py  restore.py  system_install.py  utils.py
src/confmirror/diff/: __init__.py  core.py  display.py
tests/: test_backup_restore.py  test_cli.py  test_cli_agent.py  test_config.py  test_diff_core.py  test_infrastructure.py  test_init.py  test_meta.py  test_perms_list.py  test_system_install.py  test_utils.py
