[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confmirror"
version = "1.0"
description = "Backup and restore system configs with Git versioning"
readme = "README.md"
authors = [{name = "yoing945", email = "yoing945@qq.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "black",
    "isort",
]

[project.scripts]
confmirror = "confmirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi? $ '

[tool.isort]
# 让 isort 兼容 black
profile = "black"
multi_line_output = 3
line_length = 88