[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "confmirror"
version = "1.0.0"
description = "系统配置备份与还原工具"
readme = "README.md"
authors = [{name = "yoing945", email = "yoing945@qq.com"}]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
    "pathspec>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "black",
    "isort",
    "pyright>=1.1",
]

[project.scripts]
confmirror = "confmirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi? $ '

[tool.isort]
# 让 isort 兼容 black
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingImports = true
reportUndefinedVariable = true

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
]
